[gd_scene load_steps=6 format=3 uid="uid://4cpcdj1qjygp"]

[ext_resource type="Script" path="res://scripts/powerup.gd" id="1_vwo12"]
[ext_resource type="Texture2D" uid="uid://oy1jh1d1t3kd" path="res://icon.svg" id="2_807mp"]
[ext_resource type="Script" path="res://scripts/powerups/speed_bullet_strategy.gd" id="2_geypm"]

[sub_resource type="Resource" id="Resource_iirlc"]
script = ExtResource("2_geypm")
speed_increase = 400.0
texture = ExtResource("2_807mp")
upgrade_text = "Speed"
duration = 15.0

[sub_resource type="CircleShape2D" id="CircleShape2D_1kwoy"]
radius = 25.0

[node name="PowerUp" type="Area2D" node_paths=PackedStringArray("label", "sprite", "particles", "pickup_sound")]
collision_layer = 129
script = ExtResource("1_vwo12")
power_up_strategy = SubResource("Resource_iirlc")
label = NodePath("Label")
sprite = NodePath("Sprite2D")
particles = NodePath("GPUParticles2D")
pickup_sound = NodePath("PickupSound")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_1kwoy")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_807mp")

[node name="Label" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -38.0
offset_top = 61.5
offset_right = 38.0
offset_bottom = 84.5
grow_horizontal = 2
grow_vertical = 2
text = "Power-Up"

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
emitting = false
amount = 30
lifetime = 1.5
one_shot = true

[node name="PickupSound" type="AudioStreamPlayer" parent="."]

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="queue_free"]
